formats/beancount/v3/tree-sitter/test/corpus/comments.txt
================================================================================
Comment only file
================================================================================

; This is a comment

--------------------------------------------------------------------------------

(file
  (comment))

================================================================================
Multiple comments
================================================================================

; First comment
; Second comment

--------------------------------------------------------------------------------

(file
  (comment)
  (comment))

================================================================================
Comment with special characters
================================================================================

; Comment with #tag and ^link and @mention

--------------------------------------------------------------------------------

(file
  (comment))

================================================================================
Comment after directive
================================================================================

2024-01-01 open Assets:Checking  ; bank account

--------------------------------------------------------------------------------

(file
  (open
    (date)
    (account)
    (comment)))

================================================================================
Comment after option
================================================================================

option "title" "Test"  ; main ledger

--------------------------------------------------------------------------------

(file
  (option
    name: (string)
    value: (string)
    (comment)))

================================================================================
Blank lines between directives
================================================================================

2024-01-01 open Assets:A

2024-01-02 open Assets:B

--------------------------------------------------------------------------------

(file
  (open
    (date)
    (account))
  (open
    (date)
    (account)))

================================================================================
Section header comment
================================================================================

; ===== Assets =====
2024-01-01 open Assets:Checking

--------------------------------------------------------------------------------

(file
  (comment)
  (open
    (date)
    (account)))

================================================================================
Unicode in comment
================================================================================

; Japanese: Japanese text
; Emoji: Thumbs up

--------------------------------------------------------------------------------

(file
  (comment)
  (comment))
