formats/beancount/v3/tree-sitter/test/corpus/directives.txt
================================================================================
Open directive - minimal
================================================================================

2024-01-01 open Assets:Checking

--------------------------------------------------------------------------------

(file
  (open
    (date)
    (account)))

================================================================================
Open directive with currency
================================================================================

2024-01-01 open Assets:Checking USD

--------------------------------------------------------------------------------

(file
  (open
    (date)
    (account)
    (currency_list
      (currency))))

================================================================================
Open directive with multiple currencies
================================================================================

2024-01-01 open Assets:Brokerage USD,EUR,AAPL

--------------------------------------------------------------------------------

(file
  (open
    (date)
    (account)
    (currency_list
      (currency)
      (currency)
      (currency))))

================================================================================
Open directive with booking method
================================================================================

2024-01-01 open Assets:Stock AAPL "FIFO"

--------------------------------------------------------------------------------

(file
  (open
    (date)
    (account)
    (currency_list
      (currency))
    (booking_method
      (string))))

================================================================================
Close directive
================================================================================

2024-12-31 close Assets:Checking

--------------------------------------------------------------------------------

(file
  (close
    (date)
    (account)))

================================================================================
Balance directive
================================================================================

2024-01-15 balance Assets:Checking 1234.56 USD

--------------------------------------------------------------------------------

(file
  (balance
    (date)
    (account)
    (amount_with_tolerance
      (amount
        (number)
        (currency)))))

================================================================================
Balance directive with tolerance
================================================================================

2024-01-15 balance Assets:Checking 1234.56 ~ 0.01 USD

--------------------------------------------------------------------------------

(file
  (balance
    (date)
    (account)
    (amount_with_tolerance
      (amount
        (number)
        (currency))
      (number))))

================================================================================
Pad directive
================================================================================

2024-01-01 pad Assets:Checking Equity:Opening

--------------------------------------------------------------------------------

(file
  (pad
    (date)
    account: (account)
    pad_account: (account)))

================================================================================
Commodity directive
================================================================================

2024-01-01 commodity USD

--------------------------------------------------------------------------------

(file
  (commodity
    (date)
    (currency)))

================================================================================
Price directive
================================================================================

2024-01-15 price AAPL 185.50 USD

--------------------------------------------------------------------------------

(file
  (price
    (date)
    (currency)
    (amount
      (number)
      (currency))))

================================================================================
Event directive
================================================================================

2024-01-15 event "location" "New York"

--------------------------------------------------------------------------------

(file
  (event
    (date)
    type: (string)
    value: (string)))

================================================================================
Note directive
================================================================================

2024-01-15 note Assets:Checking "Account opened"

--------------------------------------------------------------------------------

(file
  (note
    (date)
    (account)
    (string)))

================================================================================
Document directive
================================================================================

2024-01-15 document Assets:Checking "statement.pdf"

--------------------------------------------------------------------------------

(file
  (document
    (date)
    (account)
    (string)))

================================================================================
Query directive
================================================================================

2024-01-15 query "balance-check" "SELECT account FROM postings"

--------------------------------------------------------------------------------

(file
  (query
    (date)
    name: (string)
    query_string: (string)))

================================================================================
Custom directive with string
================================================================================

2024-01-15 custom "budget" "test"

--------------------------------------------------------------------------------

(file
  (custom
    (date)
    type: (string)
    (custom_value
      (string))))

================================================================================
Custom directive with account and amount
================================================================================

2024-01-15 custom "budget" Expenses:Food 500 USD

--------------------------------------------------------------------------------

(file
  (custom
    (date)
    type: (string)
    (custom_value
      (account))
    (custom_value
      (amount
        (number)
        (currency)))))
