formats/beancount/v3/tree-sitter/test/corpus/meta_directives.txt
================================================================================
Option directive
================================================================================

option "title" "My Personal Finances"

--------------------------------------------------------------------------------

(file
  (option
    name: (string)
    value: (string)))

================================================================================
Include directive
================================================================================

include "accounts.beancount"

--------------------------------------------------------------------------------

(file
  (include
    (string)))

================================================================================
Plugin directive without config
================================================================================

plugin "beancount.plugins.auto_accounts"

--------------------------------------------------------------------------------

(file
  (plugin
    module: (string)))

================================================================================
Plugin directive with config
================================================================================

plugin "beancount.plugins.auto_accounts" "Liabilities:CreditCard"

--------------------------------------------------------------------------------

(file
  (plugin
    module: (string)
    config: (string)))

================================================================================
Pushtag directive
================================================================================

pushtag #trip-2024

--------------------------------------------------------------------------------

(file
  (pushtag
    (tag)))

================================================================================
Poptag directive
================================================================================

poptag #trip-2024

--------------------------------------------------------------------------------

(file
  (poptag
    (tag)))

================================================================================
Pushmeta directive
================================================================================

pushmeta location: "NYC"

--------------------------------------------------------------------------------

(file
  (pushmeta
    (metadata_key)
    (metadata_value
      (string))))

================================================================================
Popmeta directive
================================================================================

popmeta location:

--------------------------------------------------------------------------------

(file
  (popmeta
    (metadata_key)))

================================================================================
Option with comment
================================================================================

option "title" "My Ledger"  ; this is my main ledger

--------------------------------------------------------------------------------

(file
  (option
    name: (string)
    value: (string)
    (comment)))

================================================================================
Include with comment
================================================================================

include "expenses.beancount"  ; monthly expenses

--------------------------------------------------------------------------------

(file
  (include
    (string)
    (comment)))
