formats/beancount/v3/tree-sitter/test/corpus/primitives.txt
================================================================================
Date with hyphen separator
================================================================================

2024-01-15 open Assets:Checking

--------------------------------------------------------------------------------

(file
  (open
    (date)
    (account)))

================================================================================
Date with slash separator
================================================================================

2024/01/15 open Assets:Checking

--------------------------------------------------------------------------------

(file
  (open
    (date)
    (account)))

================================================================================
Account - Assets root
================================================================================

2024-01-01 open Assets:Bank:Checking

--------------------------------------------------------------------------------

(file
  (open
    (date)
    (account)))

================================================================================
Account - Liabilities root
================================================================================

2024-01-01 open Liabilities:CreditCard:Visa

--------------------------------------------------------------------------------

(file
  (open
    (date)
    (account)))

================================================================================
Account - Equity root
================================================================================

2024-01-01 open Equity:Opening-Balances

--------------------------------------------------------------------------------

(file
  (open
    (date)
    (account)))

================================================================================
Account - Income root
================================================================================

2024-01-01 open Income:Salary:Employer

--------------------------------------------------------------------------------

(file
  (open
    (date)
    (account)))

================================================================================
Account - Expenses root
================================================================================

2024-01-01 open Expenses:Food:Groceries

--------------------------------------------------------------------------------

(file
  (open
    (date)
    (account)))

================================================================================
Account with digits
================================================================================

2024-01-01 open Assets:401k

--------------------------------------------------------------------------------

(file
  (open
    (date)
    (account)))

================================================================================
Account with hyphen
================================================================================

2024-01-01 open Assets:Credit-Union

--------------------------------------------------------------------------------

(file
  (open
    (date)
    (account)))

================================================================================
Currency - three letter
================================================================================

2024-01-01 commodity USD

--------------------------------------------------------------------------------

(file
  (commodity
    (date)
    (currency)))

================================================================================
Currency - two letter minimum
================================================================================

2024-01-01 commodity AU

--------------------------------------------------------------------------------

(file
  (commodity
    (date)
    (currency)))

================================================================================
Currency with numbers
================================================================================

2024-01-01 commodity VTI2

--------------------------------------------------------------------------------

(file
  (commodity
    (date)
    (currency)))

================================================================================
Currency with dot
================================================================================

2024-01-01 commodity BRK.B

--------------------------------------------------------------------------------

(file
  (commodity
    (date)
    (currency)))

================================================================================
Currency with underscore
================================================================================

2024-01-01 commodity ABC_DEF

--------------------------------------------------------------------------------

(file
  (commodity
    (date)
    (currency)))

================================================================================
Currency with apostrophe
================================================================================

2024-01-01 commodity AB'CD

--------------------------------------------------------------------------------

(file
  (commodity
    (date)
    (currency)))

================================================================================
Number - integer
================================================================================

2024-01-15 price USD 1 EUR

--------------------------------------------------------------------------------

(file
  (price
    (date)
    (currency)
    (amount
      (number)
      (currency))))

================================================================================
Number - decimal
================================================================================

2024-01-15 price USD 1.23 EUR

--------------------------------------------------------------------------------

(file
  (price
    (date)
    (currency)
    (amount
      (number)
      (currency))))

================================================================================
Number - negative
================================================================================

2024-01-15 * "Negative"
  Assets:A  -100 USD
  Assets:B

--------------------------------------------------------------------------------

(file
  (transaction
    (date)
    (txn_flag)
    (txn_strings
      (string))
    (posting
      (account)
      (amount
        (number)
        (currency)))
    (posting
      (account))))

================================================================================
Number with thousand separators
================================================================================

2024-01-15 price USD 1,234,567.89 EUR

--------------------------------------------------------------------------------

(file
  (price
    (date)
    (currency)
    (amount
      (number)
      (currency))))

================================================================================
Number - leading decimal
================================================================================

2024-01-15 price USD .50 EUR

--------------------------------------------------------------------------------

(file
  (price
    (date)
    (currency)
    (amount
      (number)
      (currency))))

================================================================================
String - simple
================================================================================

2024-01-15 event "location" "New York"

--------------------------------------------------------------------------------

(file
  (event
    (date)
    type: (string)
    value: (string)))

================================================================================
String with escaped quote
================================================================================

2024-01-15 event "test" "Say \"hello\""

--------------------------------------------------------------------------------

(file
  (event
    (date)
    type: (string)
    value: (string)))

================================================================================
String with escaped backslash
================================================================================

2024-01-15 event "path" "C:\\Users\\me"

--------------------------------------------------------------------------------

(file
  (event
    (date)
    type: (string)
    value: (string)))

================================================================================
String with newline escape
================================================================================

2024-01-15 event "multi" "line1\nline2"

--------------------------------------------------------------------------------

(file
  (event
    (date)
    type: (string)
    value: (string)))

================================================================================
Tag simple
================================================================================

2024-01-15 * "Test" #travel
  Assets:A  -100 USD
  Expenses:B

--------------------------------------------------------------------------------

(file
  (transaction
    (date)
    (txn_flag)
    (txn_strings
      (string))
    (tags_links
      (tag))
    (posting
      (account)
      (amount
        (number)
        (currency)))
    (posting
      (account))))

================================================================================
Tag with numbers
================================================================================

2024-01-15 * "Test" #trip2024
  Assets:A  -100 USD
  Expenses:B

--------------------------------------------------------------------------------

(file
  (transaction
    (date)
    (txn_flag)
    (txn_strings
      (string))
    (tags_links
      (tag))
    (posting
      (account)
      (amount
        (number)
        (currency)))
    (posting
      (account))))

================================================================================
Tag with hyphen
================================================================================

2024-01-15 * "Test" #trip-europe
  Assets:A  -100 USD
  Expenses:B

--------------------------------------------------------------------------------

(file
  (transaction
    (date)
    (txn_flag)
    (txn_strings
      (string))
    (tags_links
      (tag))
    (posting
      (account)
      (amount
        (number)
        (currency)))
    (posting
      (account))))

================================================================================
Tag with slash
================================================================================

2024-01-15 * "Test" #project/v1
  Assets:A  -100 USD
  Expenses:B

--------------------------------------------------------------------------------

(file
  (transaction
    (date)
    (txn_flag)
    (txn_strings
      (string))
    (tags_links
      (tag))
    (posting
      (account)
      (amount
        (number)
        (currency)))
    (posting
      (account))))

================================================================================
Link simple
================================================================================

2024-01-15 * "Test" ^invoice-123
  Assets:A  -100 USD
  Expenses:B

--------------------------------------------------------------------------------

(file
  (transaction
    (date)
    (txn_flag)
    (txn_strings
      (string))
    (tags_links
      (link))
    (posting
      (account)
      (amount
        (number)
        (currency)))
    (posting
      (account))))

================================================================================
Boolean TRUE
================================================================================

2024-01-01 open Assets:A
  active: TRUE

--------------------------------------------------------------------------------

(file
  (open
    (date)
    (account)
    (metadata
      (metadata_key)
      (metadata_value
        (boolean)))))

================================================================================
Boolean FALSE
================================================================================

2024-01-01 open Assets:A
  active: FALSE

--------------------------------------------------------------------------------

(file
  (open
    (date)
    (account)
    (metadata
      (metadata_key)
      (metadata_value
        (boolean)))))
